--- a/index.html
+++ b/index.html
@@ -21,17 +21,22 @@
             </div>
             <nav>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Systems</li>
+                    <li>Layout</li>
+                    <li>Testing</li>
+                    <li>Benefits</li>
                 </ul>
             </nav>
         </div>
         <div> <!-- background imag -->
-            <div>
-                <h1></h1>
-                <p></p>
+            <div class="wrapper">
+                <div>
+                    <img src="" alt="">
+                </div>
+               <div>
+                    <h1>Atomic Design</h1>
+                    <p>We're not designing pages, we're designing systesm of componets</p>
+               </div>
             </div>
         </div>
     </div>
