--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
         <header>
             <h2>Benefits</h2>
         </header>
-        <p>Atomic design can require considerably more thought and planning, but it’s often worth the extra effort. So what are the main benefits of it?</p>
+        <p>Atomic design can require considerably more thought and planning, but it's often worth the extra effort. So what are the main benefits of it?</p>
     </section>
 
     <div class="row">
-        <div class="row">
-            <div><!-- Fontawesome --></div>
-            <section>
+        <div class="row col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-1"><!-- Fontawesome --></div>
+            <section class="col-sm-12 col-md-5">
                 <header>
                     <h3>Design</h3>
                 </header>
@@ -134,9 +134,9 @@
                 <p>Style guide creation becomes simple — Applying the atomic design principles from the get-go, which means that all the atoms and molecules are created before the site is built, you can incorporate all your atoms and molecules into your style guide. This keeps your design consistent across platforms.</p>
             </section>
         </div>
-        <div class="row">
-            <div><!-- Fontawesome --></div>
-            <section>
+        <div class="row col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-1"><!-- Fontawesome --></div>
+            <section class="col-sm-12 col-md-5">
                 <header>
                     <h3>Code</h3>
                 </header>
