--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Pacifico&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"><link rel="stylesheet" href="css/normalize.css">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Pacifico&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/main.css">
+<script src="https://kit.fontawesome.com/f054c82b4b.js" crossorigin="anonymous"></script>
+
 <meta charset="UTF-8">
+
 <title>Assignment 2</title>
 
 </head>
@@ -31,7 +35,7 @@
     </div>
     <div> 
         <div id="bg-image" class=" wrapper"> 
-            <h1>atomic Design</h1>
+            <h1>atomic design</h1>
             <div>
                 <p>We're not designing pages, we're designing systesm of componets</p>
             </div>
@@ -51,7 +55,7 @@
         <div class="row">
             
             <section class="col-sm-12 col-md-4 row">
-                <div class="col-sm-2 col-md-12"><!-- Font awesome --></div>
+                <div class="col-sm-2 col-md-12"><span class="fa-solid fa-atom"></span></div>
                 <div class="col-sm-10 col-md-12">
                     <header>
                         <h3>Atoms</h3>
@@ -61,7 +65,7 @@
             </section>
             
             <section class="col-sm-12 col-md-4 row">
-                <div class="col-sm-2 col-md-12"></div>
+                <div class="col-sm-2 col-md-12"><span class="fa-solid fa-dna"></span></div>
                 <div class="col-sm-10 col-md-12">
                     <header>
                         <h3>Molecules</h3>
@@ -70,8 +74,8 @@
                 </div>
             </section>
 
-            <section class="col-sm-12 col-md-4">
-                <div class="col-sm-2 col-md-12"></div>
+            <section class="col-sm-12 col-md-4 row">
+                <div class="col-sm-2 col-md-12"><span class="fa-solid fa-bacteria"></span></div>
                 <div class="col-sm-10 col-md-12">
                     <header>
                         <h3>Organisms</h3>
@@ -131,7 +135,7 @@
         </header>
         <div class="row">
             <section class="row col-sm-12 col-md-6">
-                <div class="col-sm-12 col-md-1"><!-- Fontawesome  switch the div and section--></div>
+                <div class="col-sm-12 col-md-1"><span class="fa-solid fa-pen-ruler"></span></div>
                 <div class="col-sm-12 col-md-11">
                     <header>
                         <h3>Design</h3>
@@ -141,7 +145,7 @@
                 </div>
             </section>
             <section class="row col-sm-12 col-md-6">
-                <div class="col-sm-12 col-md-1"><!-- Fontawesome --></div>
+                <div class="col-sm-12 col-md-1"><span class="fa-sharp fa-solid fa-code"></span></div>
                 <div class="col-sm-12 col-md-11">
                     <header>
                         <h3>Code</h3>
