--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
         </section>
         <section class="col-sm-12 col-md-8"> 
             <header>
-                <h2>Layout</h2>
+                <h2>layout</h2>
             </header>
             <p>At the template stage, we break our chemistry analogy to get into language that makes more sense to our clients and our final output. Templates consist mostly of groups of organisms stitched together to form pages. It's here where we start to see the design coming together and start seeing things like layout in action.</p>
             <div class="row">
-                <section class="col-sm-12 col-md-4">
+                <section class="col-sm-12 col-md-6">
                     <header>
-                        <h3>Templates</h3>
+                        <h3>templates</h3>
                     </header>
                     <p><b>Templates are very concrete and provide context to all these relatively abstract molecules and organisms.</b> Templates are also where clients start seeing the final design in place. In my experience working with this methodology, templates begin their life as HTML wireframes, but over time increase fidelity to ultimately become the final deliverable. </p>
                 </section>
-                <section class="col-sm-12 col-md-4">
+                <section class="col-sm-12 col-md-6">
                     <header>
-                        <h3>Pages</h3>
+                        <h3>pages</h3>
                     </header>
                     <p><b>Pages are specific instances of templates.</b> Here, placeholder content is replaced with real representative content to give an accurate depiction of what a user will ultimately see. Pages are the highest level of fidelity and because they're the most tangible, it's typically where most people in the process spend most of their time and what most reviews revolve around.</p>
                 </section>
@@ -121,7 +121,7 @@
         </div>
         <section class="col-sm-12 col-md-6 col-lg-7">
             <header>
-                <h2>Testing the Systems</h2>
+                <h2>testing the systems</h2>
             </header>
             <p>The page stage is essential as it's where we test the effectiveness of the design system. Viewing everything in context allows us to loop back to modify our molecules, organisms, and templates to better address the real context of the design.</p>
             <p>Pages are also the place to test variations in templates. For example, you might want to articulate what a headline containing 40 characters looks like, but also demonstrate what 340 characters looks like. What does it look like when a user has one item in their shopping cart versus 10 items with a discount code applied? Again, these specific instances influence how we loop back through and construct our system</p>
@@ -138,7 +138,7 @@
                 <div class="col-sm-12 col-md-1"><span class="fa-solid fa-pen-ruler"></span></div>
                 <div class="col-sm-12 col-md-11">
                     <header>
-                        <h3>Design</h3>
+                        <h3>design</h3>
                     </header>
                     <p><b>Building a component-based system</b> — When we are breaking down our components into basic atoms, it becomes easier to see what atoms can be combined or mixed and matched to form other molecules or organisms. It helps us to navigate between atomic parts and the whole of our UIs.</p>
                     <p><b>Style guide creation becomes simple</b> — Applying the atomic design principles from the get-go, which means that all the atoms and molecules are created before the site is built, you can incorporate all your atoms and molecules into your style guide. This keeps your design consistent across platforms.</p>
@@ -148,7 +148,7 @@
                 <div class="col-sm-12 col-md-1"><span class="fa-sharp fa-solid fa-code"></span></div>
                 <div class="col-sm-12 col-md-11">
                     <header>
-                        <h3>Code</h3>
+                        <h3>code</h3>
                     </header>
                     <p><b>Easy-to-read code that is more consistent</b>— The code of 'atomically' designed websites is typically much easier to read than one created a more traditional way. Consistency is given when you use predefined atoms in order to create the site layout. It makes it easy to see which components are being used for different parts of the site. This reduces the tendency of duplicate code on the site.<p>
                     <p><b>Faster Prototyping and updating</b> — By having a defined list of atoms before the creation process begins eventually means that you can mock-up pages quickly and easily. You simply pick and combine the required elements for the site. If an update is necessary, only one atom, molecule or organism is changed at a time. This simplifies any updates to a component that is carried out across to all other instances.</p>
