Thursday after class

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="bg-image" class=" wrapper"> 
             <h1>atomic design</h1>
             <div>
-                <p>We're not designing pages, we're designing systesm of componets</p>
+                <p>We're not designing pages, we're <br> designing systesm of componets</p>
             </div>
         </div>
     </div>
@@ -58,7 +58,7 @@
                 <div class="col-sm-2 col-md-12"><span class="fa-solid fa-atom"></span></div>
                 <div class="col-sm-10 col-md-12">
                     <header>
-                        <h3>Atoms</h3>
+                        <h3>atoms</h3>
                     </header>
                     <p><b>Atoms are the basic building blocks of matter.</b> Applied to web interfaces, atoms are our HTML tags, such as a form label, an input or a button. Atoms can also include color palettes, fonts and animations. They're fairly abstract and often not terribly useful on their own. However, they're good as a reference in the context of a pattern library as you can see all your global styles laid out at a glance.</p>
                 </div>
@@ -68,7 +68,7 @@
                 <div class="col-sm-2 col-md-12"><span class="fa-solid fa-dna"></span></div>
                 <div class="col-sm-10 col-md-12">
                     <header>
-                        <h3>Molecules</h3>
+                        <h3>molecules</h3>
                     </header>
                     <p>Things start getting more interesting and tangible when we start combining atoms together. <b> Molecules are groups of atoms bonded together and are the smallest fundamental units of a compound.</b> These molecules take on their own properties and serve as the backbone of our design systems.</p>
                 </div>
@@ -78,7 +78,7 @@
                 <div class="col-sm-2 col-md-12"><span class="fa-solid fa-bacteria"></span></div>
                 <div class="col-sm-10 col-md-12">
                     <header>
-                        <h3>Organisms</h3>
+                        <h3>organisms</h3>
                     </header>
                     <p>Molecules give us some building blocks to work with, and we can now combine them together to form organisms. <b>Organisms are groups of molecules joined together to form a relatively complex, distinct section of an interface.</b> Organisms can consist of similar and/or different molecule types. Building up from molecules to organisms encourages creating standalone, portable, reusable components.</p>
                </div>
@@ -86,9 +86,9 @@
         </div>
     </section>
     <div class="row" id="layout">
-        <section class="col-sm-12 col-md-4"> 
+        <section class="row col-sm-12 col-md-4"> 
             <header>
-                <h2>Why Atomic Design</h2>
+                <h2>why atomic design</h2>
             </header>
             <p>Atomic design provides a clear methodology for crafting design systems. Atomic design gives us the ability to traverse from abstract to concrete. Because of this, we can create systems that promote consistency and scalability while simultaneously showing things in their final context. And by assembling rather than deconstructing, we're crafting a system right out of the gate instead of cherry picking patterns after the fact.</p>
         </section>
@@ -130,13 +130,13 @@
 
     <section class="row" id="benefits">
         <header class="col-sm-12 col-md-8 col-center">
-            <h2>Benefits</h2>
+            <h2>benefits</h2>
             <p>Atomic design can require considerably more thought and planning, but it's often worth the extra effort. So what are the main benefits of it?</p>
         </header>
         <div class="row">
             <section class="row col-sm-12 col-md-6">
-                <div class="col-sm-12 col-md-1"><span class="fa-solid fa-pen-ruler"></span></div>
-                <div class="col-sm-12 col-md-11">
+                <div class="col-sm-12 col-md-2"><span class="fa-solid fa-pen-ruler"></span></div>
+                <div class="col-sm-12 col-md-10">
                     <header>
                         <h3>design</h3>
                     </header>
@@ -145,8 +145,8 @@
                 </div>
             </section>
             <section class="row col-sm-12 col-md-6">
-                <div class="col-sm-12 col-md-1"><span class="fa-sharp fa-solid fa-code"></span></div>
-                <div class="col-sm-12 col-md-11">
+                <div class="col-sm-12 col-md-2"><span class="fa-sharp fa-solid fa-code"></span></div>
+                <div class="col-sm-12 col-md-10">
                     <header>
                         <h3>code</h3>
                     </header>
@@ -160,8 +160,8 @@
 </main>
 
 <footer>
-   <div class="wrapper">
-        <nav>
+   <div class="wrapper ">
+        <nav class="col-sm-8">
             <ul>
                 <li><a href="#systems">Systems</a></li>
                 <li><a href="#layout">Layout</a></li>
@@ -169,9 +169,9 @@
                 <li><a href="#benefits">Benefits</a></li>
             </ul>
         </nav>
-        <div>
+        <div class="col-sm-4">
             <div>
-                <img class="col-sm-2 col-lg-2" src="img/ding_logo@2x.jpg" alt="">
+                <img class="col-sm-12 col-lg-6" src="img/ding_logo@2x.jpg" alt="">
             </div>
             <h4>Atomic Design</h4>
             <p>By Brad Frost</p>
