--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <header>
     <div  id="pos-fixed">
         <div class="wrapper row">
-            <div class="col-sm-12 col-lg-4">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <img class="col-sm-4 col-lg-4" src="img/ding_logo@2x.jpg" alt="">
             </div>
-            <nav class="col-sm-12 col-md-4">
+            <nav class="col-sm-12 col-md-6 col-lg-6">
                 <ul>
                     <li><a href="#systems">Systems</a></li>
                     <li><a href="#layout">Layout</a></li>
@@ -116,8 +116,8 @@
     </div>
 
     <div class="row" id="testing">
-        <div class="col-sm-NOT THERE col-md-6 col-lg-5">
-            <img class="col-sm-12 col-md-6 col-lg-12" src="img/rainbows@2x.jpg" alt="">
+        <div class="col-sm-NOT THERE col-md-6 col-lg-5 bg-image">
+            
         </div>
         <section class="col-sm-12 col-md-6 col-lg-7">
             <header>
