--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div  id="pos-fixed">
         <div class="wrapper row">
             <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="col-sm-4 col-lg-4" src="img/ding_logo@2x.jpg" alt="">
+                <img src="img/ding_logo@2x.jpg" alt="">
             </div>
             <nav class="col-sm-12 col-md-6 col-lg-6">
                 <ul>
@@ -33,8 +33,8 @@
             </nav>
         </div>
     </div>
-    <div> 
-        <div id="bg-image" class=" wrapper"> 
+    <div id="bg-hero"> 
+        <div class=" wrapper"> 
             <h1>atomic design</h1>
             <div>
                 <p>We're not designing pages, we're <br> designing systesm of componets</p>
@@ -171,7 +171,7 @@
         </nav>
         <div class="col-sm-4">
             <div>
-                <img class="col-sm-12 col-lg-6" src="img/ding_logo@2x.jpg" alt="">
+                <img src="img/ding_logo@2x.jpg" alt="">
             </div>
             <h4>Atomic Design</h4>
             <p>By Brad Frost</p>
