Issues four done for you.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
    
 <header>
-    <div  id="pos-fixed">
+    <div  id="nav-bar"> <!-- Rename to nav-bar -->
         <div class="wrapper row">
             <div class="col-sm-12 col-md-6 col-lg-4">
-                <img src="img/logo-ding@2x.jpg" alt="logo">  <!-- /! ---Non retina--- !/ -->
+                <img src="img/logo-ding@2x.jpg" alt="ding">  <!-- /! ---Non retina--- !/ -->
             </div>
             <nav class="col-sm-12 col-md-6">
                 <ul>
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div id="bg-hero"> 
-        <div class=" wrapper"> 
+        <div class=" wrapper"> <!--remove br and col width to div -->
             <h1>atomic design</h1>
             <div>
                 <p>We're not designing pages, we're <br> designing systesm of componets</p>
@@ -148,8 +148,8 @@
                     <header>
                         <h3>design</h3>
                     </header>
-                    <p><b>Building a component-based system</b> &dash; When we are breaking down our components into basic atoms, it becomes easier to see what atoms can be combined or mixed and matched to form other molecules or organisms. It helps us to navigate between atomic parts and the whole of our UIs.</p>
-                    <p><b>Style guide creation becomes simple</b> &dash; Applying the atomic design principles from the get-go, which means that all the atoms and molecules are created before the site is built, you can incorporate all your atoms and molecules into your style guide. This keeps your design consistent across platforms.</p>
+                    <p><b>Building a component&ndash;based system</b> &ndash; When we are breaking down our components into basic atoms, it becomes easier to see what atoms can be combined or mixed and matched to form other molecules or organisms. It helps us to navigate between atomic parts and the whole of our UIs.</p>
+                    <p><b>Style guide creation becomes simple</b> &ndash; Applying the atomic design principles from the get-go, which means that all the atoms and molecules are created before the site is built, you can incorporate all your atoms and molecules into your style guide. This keeps your design consistent across platforms.</p>
                 </div>
             </section>
             <section class="row col-sm-12 col-md-6">
@@ -160,7 +160,7 @@
                     <header>
                         <h3>code</h3>
                     </header>
-                    <p><b>Easy-to-read code that is more consistent</b>— The code of 'atomically' designed websites is typically much easier to read than one created a more traditional way. Consistency is given when you use predefined atoms in order to create the site layout. It makes it easy to see which components are being used for different parts of the site. This reduces the tendency of duplicate code on the site.<p>
+                    <p><b>Easy&ndash;to&ndash;read code that is more consistent</b>&ndash; The code of 'atomically' designed websites is typically much easier to read than one created a more traditional way. Consistency is given when you use predefined atoms in order to create the site layout. It makes it easy to see which components are being used for different parts of the site. This reduces the tendency of duplicate code on the site.<p>
                     <p><b>Faster Prototyping and updating</b> — By having a defined list of atoms before the creation process begins eventually means that you can mock-up pages quickly and easily. You simply pick and combine the required elements for the site. If an update is necessary, only one atom, molecule or organism is changed at a time. This simplifies any updates to a component that is carried out across to all other instances.</p>
                 </div>
             </section>
@@ -181,7 +181,7 @@
         </nav>
         <section class="col-sm-5"> 
             <div>
-                <img src="img/logo-ding@2x.jpg" alt="logo">
+                <img src="img/logo-ding@2x.jpg" alt="ding">
             </div>
             <h4>Atomic Design</h4>
             <p>By Brad Frost</p>
