--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
    
 <header>
-    <div  id="nav-bar"> <!-- Rename to nav-bar -->
+    <div  id="nav-bar"> 
         <div class="wrapper row">
             <div class="col-sm-12 col-md-6 col-lg-4">
-                <img src="img/logo-ding@2x.jpg" alt="ding">  <!-- /! ---Non retina--- !/ -->
+                <img src="img/logo-ding.jpg" alt="ding" data-rjs="2">  
             </div>
             <nav class="col-sm-12 col-md-6">
                 <ul>
@@ -34,10 +34,10 @@
         </div>
     </div>
     <div id="bg-hero"> 
-        <div class=" wrapper"> <!--remove br and col width to div -->
+        <div class="col-sm-12 wrapper"> 
             <h1>atomic design</h1>
             <div>
-                <p>We're not designing pages, we're <br> designing systesm of componets</p>
+                <p>We're not designing pages, we're  designing systesm of componets</p>
             </div>
         </div>
     </div>
@@ -92,13 +92,13 @@
         </div>
     </section>
     <div class="row" id="layout">
-        <section class="row col-sm-12 col-md-4"> 
+        <section class="row col-sm-12 col-md-12 col-lg-4"> 
             <header>
                 <h2>why atomic design</h2>
             </header>
             <p>Atomic design provides a clear methodology for crafting design systems. Atomic design gives us the ability to traverse from abstract to concrete. Because of this, we can create systems that promote consistency and scalability while simultaneously showing things in their final context. And by assembling rather than deconstructing, we're crafting a system right out of the gate instead of cherry picking patterns after the fact.</p>
         </section>
-        <section class="col-sm-12 col-md-8"> 
+        <section class="col-sm-12 col-md-12 col-lg-8"> 
             <header>
                 <h2>layout</h2>
             </header>
@@ -125,7 +125,7 @@
         <div class="col-md-6 col-lg-5">
             
         </div>
-        <section class="col-sm-12 col-md-6 col-lg-7">
+        <section class="col-sm-12 col-lg-7">
             <header>
                 <h2>testing the systems</h2>
             </header>
@@ -171,7 +171,7 @@
 
 <footer>
    <div class="wrapper ">
-        <nav class="col-sm-8">
+        <nav class="col-sm-12 col-lg-8">
             <ul>
                 <li><a href="#systems">Systems</a></li>
                 <li><a href="#layout">Layout</a></li>
@@ -179,7 +179,7 @@
                 <li><a href="#benefits">Benefits</a></li>
             </ul>
         </nav>
-        <section class="col-sm-5"> 
+        <section class="col-sm-12 col-lg-5"> 
             <div>
                 <img src="img/logo-ding@2x.jpg" alt="ding">
             </div>
