--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="bg-hero"> 
         <div class="col-sm-12 wrapper"> 
             <h1>atomic design</h1>
-            <div class="col-lg-5"> <!-- Missing Div -->
+            <div class="col-lg-5"> 
                 <p>We're not designing pages, we're  designing systesm of componets</p>
             </div>
         </div>
